--- a/src/main/webapp/app/admin/user-management/update/user-management-update.component.html
+++ b/src/main/webapp/app/admin/user-management/update/user-management-update.component.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label">اسم المستخدم</label>
+          <label class="form-control-label">اسم المستخـدم</label>
           <input type="text" class="form-control" name="login" formControlName="login" />
 
           <div *ngIf="editForm.get('login')!.invalid && (editForm.get('login')!.dirty || editForm.get('login')!.touched)">
